--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-cobyqa==1.0.1
-numpy==1.26.3
+cobyqa==1.0.2
+numpy==1.26.4
 optiprofiler==1.0.dev0
-pdfo==2.0.1
+pdfo==2.1.0
+Py-BOBYQA==1.4
 pycutest==1.6.0
 scipy==1.12.0
